--- a/views/livro.html
+++ b/views/livro.html
@@ -1,8 +1,33 @@
 <div class="container" ng-if="livro">
-  <h2>{{livro.title}}</h2>
-  <p><strong>Autor:</strong> {{livro.authors[0].name}}</p>
-  <p><strong>Data de Publicação:</strong> {{livro.publish_date}}</p>
-  <p><strong>ISBN:</strong> {{livro.isbn ? livro.isbn[0] : 'N/A'}}</p>
-  <p><strong>Resumo:</strong> {{livro.description ? livro.description.value || livro.description : 'Sem resumo disponível.'}}</p>
-  <a href="#!" class="btn btn-default">Voltar</a>
+  <div class="card mt-4">
+    <div class="card-body">
+      <h2 class="card-title">{{livro.title}}</h2>
+      
+      <p class="card-text">
+        <strong>Autor:</strong> {{autor || 'Autor não encontrado'}}
+      </p>
+
+      <p class="card-text">
+        <strong>Data de Criação:</strong> {{livro.created.value | date : 'dd/MM/yyyy'}}
+      </p>
+
+      <p class="card-text">
+        <strong>Assuntos:</strong>
+        <span ng-repeat="s in livro.subjects">{{s}}{{$last ? '' : ', '}}</span>
+      </p>
+
+      <p class="card-text">
+        <strong>Resumo:</strong>
+        <span>
+          {{ livro.description.value || livro.description || 'Sem resumo disponível.' }}
+        </span>
+      </p>
+
+      <a href="#!/" class="btn btn-secondary mt-3">Voltar</a>
+    </div>
+  </div>
+</div>
+
+<div class="container mt-4" ng-if="erro">
+  <div class="alert alert-danger">Erro ao carregar os detalhes do livro.</div>
 </div>
